--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxycast"
-version = "0.6.0"
+version = "0.6.1"
 description = "AI API Proxy Desktop App"
 authors = ["you"]
 edition = "2021"
@@ -16,6 +16,7 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 tauri-plugin-autostart = "2"
+tauri-plugin-dialog = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
@@ -36,6 +37,7 @@ serde_yaml = "0.9"
 indexmap = { version = "2", features = ["serde"] }
 zip = "0.6"
 anyhow = "1"
+dashmap = "5"
 
 [features]
 default = ["custom-protocol"]
