feat: 插件系统完整实现 v0.22.0
- 实现插件安装器 (URL/本地/GitHub 安装)
- 实现插件 UI 渲染系统
- 支持 builtin 类型插件 (内置 React 组件)
- 支持 binary 类型插件 (外部二进制)
- MachineIdTool 迁移为插件
- 工具箱页面动态加载插件工具
- 推荐插件一键安装功能
- 插件卸载功能
- Release workflow 自动打包插件

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxycast"
-version = "0.21.0"
+version = "0.22.0"
 description = "AI API Proxy Desktop App"
 authors = ["you"]
 edition = "2021"
@@ -41,6 +41,7 @@ md5 = "0.7"
 urlencoding = "2"
 subtle = "2.5"
 flate2 = "1"
+tar = "0.4"
 fs2 = "0.4"
 rusqlite = { version = "0.31", features = ["bundled", "backup"] }
 serde_yaml = "0.9"
