refactor: 迁移 agent/mcp/skills/voice 模块到独立 crate
- 创建 proxycast-agent crate（event_converter, mcp_bridge, prompt）
- 创建 proxycast-skills crate（ExecutionCallback/LlmProvider trait, skill_loader）
- 扩展 voice-core crate（device, threaded_recorder, types）
- 主 crate 各模块替换为 re-export 层 + Tauri 实现
- 更新 processor/mod.rs 为纯 re-export
- 更新 app/runner.rs MCP 初始化
- 添加 capabilities/default.json
- 清理已迁移的测试文件

--- a/src-tauri/crates/voice-core/Cargo.toml
+++ b/src-tauri/crates/voice-core/Cargo.toml
@@ -32,6 +32,7 @@ reqwest = { version = "0.12", features = ["json", "multipart"] }
 
 # 异步运行时
 tokio = { version = "1", features = ["sync", "time"] }
+parking_lot = "0.12"
 
 # WebSocket 客户端（讯飞 ASR）
 tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
