--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -55,7 +55,7 @@ tracing-subscriber = "0.3"
 axum = { version = "0.7", features = ["ws"] }
 axum-server = { version = "0.7", features = ["tls-rustls"] }
 tower = "0.5"
-tower-http = { version = "0.6", features = ["limit", "cors"] }
+tower-http = { version = "0.6", features = ["limit", "cors", "timeout"] }
 
 # HTTP 客户端
 reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
