--- a/src-tauri/crates/credential/Cargo.toml
+++ b/src-tauri/crates/credential/Cargo.toml
@@ -30,6 +30,12 @@ chrono.workspace = true
 # 并发
 dashmap.workspace = true
 
+# 加密
+chacha20poly1305 = "0.10"
+base64.workspace = true
+rand.workspace = true
+sha2.workspace = true
+
 [dev-dependencies]
 proptest.workspace = true
 tempfile.workspace = true
