--- a/src-tauri/crates/server/Cargo.toml
+++ b/src-tauri/crates/server/Cargo.toml
@@ -20,6 +20,7 @@ serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 futures.workspace = true
+hex.workspace = true
 axum.workspace = true
 tower.workspace = true
 tower-http.workspace = true
@@ -35,6 +36,8 @@ subtle.workspace = true
 async-stream.workspace = true
 urlencoding.workspace = true
 parking_lot.workspace = true
+rand.workspace = true
+sha2.workspace = true
 tokio-util.workspace = true
 dirs.workspace = true
 
